[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchsig"
description = "Signal Processing Machine Learning Toolkit"
authors = [
    {name = "TorchSig Team"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["signal processing", "machine learning"]
dependencies = [
    "torch>=2.3.1",
    "torchvision",
    "tqdm",
    "opencv-python==4.8.0.74",
    "numpy==1.26.4",
    "scipy",
    "h5py",
    "matplotlib",
    "numba",
    "ipdb",
    "PyWavelets",
    "pandas",
    "lmdb",
    "scikit-learn",
    "gdown",
    "icecream",
    "torchaudio",
    "timm",
    "pytorch_lightning",
    "sympy",
    "torchmetrics",
    "click",
    "ultralytics",
    "optuna",
    "jupyter_bbox_widget"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "torchsig.__version__"}

[tool.setuptools.packages.find]
include = ["torchsig*", "datasets*"]
exclude = ["tests*", "docs*"]
namespaces = false